# captchaly-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
src/captchaly/: __init__.py  __init__.pyi  exception.py  model.py  warning.py
tests/: helpers.py  test_client.py  test_geetest.py  test_hcaptcha.py  test_recaptcha.py  test_turnstile.py
